docs: add timeseries docs for user count
