# vail_scraper/routers/api/v2/openapi.yaml
@@ -142,7 +142,9 @@ paths:
         
         # Notice
         This only counts people who have started vail once.
+        
         Users who use family sharing will get one account counted per "account" in the family share
+        
         Users who create "full" accounts through https://login.vailvr.com will only count once despite being on steam and oculus.
         
         # Rate limits
@@ -162,6 +164,57 @@ paths:
                   count:
                     type: "integer"
                     description: "How many VAIL users exists"
+  /game/user-count/timeseries:
+    get:
+      operationId: "getGameUserCountTimeseries"
+      summary: "Get how many users vail has over time"
+      description: |
+        # Info
+        Get how many people have a account on vail
+        
+        # Notice
+        This only counts people who have started vail once.
+        
+        Users who use family sharing will get one account counted per "account" in the family share
+        
+        Users who create "full" accounts through https://login.vailvr.com will only count once despite being on steam and oculus.
+        
+        # Rate limits
+        This endpoint is currently not rate limited.
+      tags: ["game"]
+      
+      parameters:
+        - name: "before"
+          in: "query"
+          schema:
+            $ref: "#/components/schemas/Timestamp"
+            description: "if not sent this will default to the current timestamp"
+        - name: "after"
+          in: "query"
+          schema:
+            $ref: "#/components/schemas/Timestamp"
+            default: 0
+        - name: "limit"
+          in: "query"
+          schema:
+            type: "number"
+            default: 100
+            minimum: 0
+            maximum: 100
+      responses:
+        "200":
+          description: "Success"
+          content:
+             application/json:
+               schema:
+                 type: "object"
+                 required:
+                   - "items"
+                 properties:
+                   items:
+                     type: "array"
+                     items:
+                       $ref: "#/components/schemas/UserCountTimeseriesEntry"
 components:
   responses:
     RateLimited:
@@ -204,6 +257,14 @@ components:
           $ref: "#/components/schemas/UserId"
         name:
           $ref: "#/components/schemas/UserName"
+    Timestamp:
+      type: "number"
+      format: "unix timestamp"
+      example: 1717260094.5
+    StringTimestamp:
+      type: "string"
+      format: "unix timestamp"
+      example: "1717260094.5"
     
     # User stats
     UserStats:
@@ -837,7 +898,18 @@ components:
           type: "number"
 
               
-            
+    # User count
+    UserCountTimeseriesEntry:
+      type: "object"
+      required:
+        - "timestamp"
+        - "count"
+      properties:
+        timestamp:
+          $ref: "#/components/schemas/StringTimestamp"
+        count:
+          type: "integer"
+    
           
     
     # Errors
